tests/unit/elf/x64/snapshots/unit__elf__x64__test_patching__add_dt_needed.snap
---
source: tests/unit/elf/x64/test_patching.rs
expression: changed_elf.libraries
---
[
    "my_dtneed",
    "libncurses.so.5",
    "libdl.so.2",
    "libc.so.6",
]
