tests/unit/elf/x64/snapshots/unit__elf__x64__test_patching__rpath_add.snap
---
source: tests/unit/elf/x64/test_patching.rs
expression: changed_macho.runpaths
---
[
    "path-graf:abababababababababababaabbababababababababab",
]
