tests/unit/elf/x64/snapshots/unit__elf__x64__test_patching__rpath_set.snap
---
source: tests/unit/elf/x64/test_patching.rs
expression: changed_elf.runpaths
---
[
    "path_graf_path_graf_path_graf_path_graf",
]
