tests/unit/elf/x64/snapshots/unit__elf__x64__test_patching__set_interpreter.snap
---
source: tests/unit/elf/x64/test_patching.rs
expression: changed_elf.interpreter
---
Some(
    "/my/ld-linux.so.",
)
