tests/unit/elf/x64/snapshots/unit__elf__x64__test_patching__set_os_abi.snap
---
source: tests/unit/elf/x64/test_patching.rs
expression: changed_elf.header
---
Header {
    e_ident: [127, 69, 76, 70, 2, 1, 1, 9, 0, 0, 0, 0, 0, 0, 0, 0],
    e_type: "EXEC",
    e_machine: 0x3e,
    e_version: 0x1,
    e_entry: 0x41f010,
    e_phoff: 0x40,
    e_shoff: 0xe3c48,
    e_flags: 0,
    e_ehsize: 64,
    e_phentsize: 56,
    e_phnum: 10,
    e_shentsize: 64,
    e_shnum: 28,
    e_shstrndx: 27,
}
