tests/unit/elf/x64/snapshots/unit__elf__x64__test_patching__set_page_size.snap
---
source: tests/unit/elf/x64/test_patching.rs
expression: changed_elf.program_headers
---
[
    ProgramHeader {
        p_type: "PT_PHDR",
        p_flags: 0x5,
        p_offset: 0x40,
        p_vaddr: 0x3fe040,
        p_paddr: 0x3fe040,
        p_filesz: 0x230,
        p_memsz: 0x230,
        p_align: 8,
    },
    ProgramHeader {
        p_type: "PT_GNU_STACK",
        p_flags: 0x6,
        p_offset: 0x0,
        p_vaddr: 0x0,
        p_paddr: 0x0,
        p_filesz: 0x0,
        p_memsz: 0x0,
        p_align: 8,
    },
    ProgramHeader {
        p_type: "PT_LOAD",
        p_flags: 0x5,
        p_offset: 0x1e078,
        p_vaddr: 0x41c078,
        p_paddr: 0x41c078,
        p_filesz: 0xbcba4,
        p_memsz: 0xbcba4,
        p_align: 8192,
    },
    ProgramHeader {
        p_type: "PT_INTERP",
        p_flags: 0x4,
        p_offset: 0x270,
        p_vaddr: 0x3fe270,
        p_paddr: 0x3fe270,
        p_filesz: 0x11,
        p_memsz: 0x11,
        p_align: 1,
    },
    ProgramHeader {
        p_type: "PT_NOTE",
        p_flags: 0x4,
        p_offset: 0x288,
        p_vaddr: 0x3fe288,
        p_paddr: 0x3fe288,
        p_filesz: 0x20,
        p_memsz: 0x20,
        p_align: 4,
    },
    ProgramHeader {
        p_type: "PT_GNU_EH_FRAME",
        p_flags: 0x4,
        p_offset: 0xc8550,
        p_vaddr: 0x4c6550,
        p_paddr: 0x4c6550,
        p_filesz: 0x3b54,
        p_memsz: 0x3b54,
        p_align: 4,
    },
    ProgramHeader {
        p_type: "PT_LOAD",
        p_flags: 0x6,
        p_offset: 0xdb000,
        p_vaddr: 0x6d9000,
        p_paddr: 0x6d9000,
        p_filesz: 0x8b60,
        p_memsz: 0xe5a8,
        p_align: 8192,
    },
    ProgramHeader {
        p_type: "PT_DYNAMIC",
        p_flags: 0x6,
        p_offset: 0x1c0f8,
        p_vaddr: 0x41a0f8,
        p_paddr: 0x41a0f8,
        p_filesz: 0x1d0,
        p_memsz: 0x1d0,
        p_align: 8,
    },
    ProgramHeader {
        p_type: "PT_NOTE",
        p_flags: 0x4,
        p_offset: 0x2a8,
        p_vaddr: 0x3fe2a8,
        p_paddr: 0x3fe2a8,
        p_filesz: 0x24,
        p_memsz: 0x24,
        p_align: 4,
    },
    ProgramHeader {
        p_type: "PT_LOAD",
        p_flags: 0x6,
        p_offset: 0x0,
        p_vaddr: 0x3fe000,
        p_paddr: 0x3fe000,
        p_filesz: 0x1c2c8,
        p_memsz: 0x1c2c8,
        p_align: 8192,
    },
]
