tests/unit/elf/x64/snapshots/unit__elf__x64__test_patching__set_soname.snap
---
source: tests/unit/elf/x64/test_patching.rs
expression: changed_elf.soname
---
Some(
    "my_soname",
)
